--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,6 +1,33 @@
 div > header {
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
+  align-items: center;
   padding: 1.5vw;
   border-bottom: solid 1px black;
+}
+div > header > div:nth-child(2) {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 1vw;
+       column-gap: 1vw;
+}
+div > header > div:nth-child(2) > img {
+  background-color: #646464;
+  border-radius: 5px;
+  width: 32px;
+  height: auto;
+}
+div > header > div:nth-child(2) > img:hover {
+  background-color: blue;
+  cursor: pointer;
+}
+div > header > div:nth-child(2) > form {
+  display: flex;
+  -moz-column-gap: 0.5vw;
+       column-gap: 0.5vw;
+}
+div > header > div:nth-child(2) > form > label {
+  display: flex;
+  -moz-column-gap: 0.5vw;
+       column-gap: 0.5vw;
 }/*# sourceMappingURL=Header.css.map */
