--- a/frontend/src/css/ProductList.scss
+++ b/frontend/src/css/ProductList.scss
@@ -1,36 +1,64 @@
 body {
-    > div {
-        > 
-        main {
+    >div {
+        >main {
             display: flex;
             justify-content: end;
-            > section:nth-child(1) {
+
+            >section:nth-child(1) {
                 width: 100%;
                 height: 70vh;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                > article {
+
+                >article {
                     width: 80%;
                     display: flex;
                     flex-wrap: wrap;
-                    justify-content: space-evenly;
-                    > div {
+                    justify-content: space-around;
+
+                    >div {
+                        display: flex;
+                        flex-direction: column;
                         padding: 1vw;
-                        border: solid 1px black;
+                        border: solid 1px rgba(45, 82, 4, 0.781);
                         border-radius: 10px;
-                        > div {
-                            > img {
+                        background-color: white;
+                        row-gap: 1vh;
+
+                        >div:nth-child(1) {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            row-gap: 1vh;
+
+                            >img {
                                 width: 12vw;
                                 height: auto;
+                            }
+                        }
+
+                        >div:nth-child(2) {
+                            display: flex;
+                            justify-content: center;
+
+                            >button {
+                                background-color: rgba(45, 82, 4, 0.781);
+                                color: white;
+                                padding: 1vh;
+                                font-weight: bold;
+                                border: none;
+                                border-radius: 50px;
                             }
                         }
                     }
                 }
             }
-            > section:nth-child(2) {
+
+            >section:nth-child(2) {
                 width: 15vw;
-                > div:nth-child(2) {
+
+                >div:nth-child(2) {
                     display: flex;
                     justify-content: center;
                     column-gap: .5vw;
