--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Acme&family=Pirata+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Acme&family=Pirata+One&display=swap");
 
 * {
   margin: 0;
@@ -6,5 +6,6 @@
 }
 
 body {
-  font-family : acme;
+  font-family: acme;
+  background-color: black;
 }
