--- a/frontend/src/components/ProductList/ProductList.css
+++ b/frontend/src/components/ProductList/ProductList.css
@@ -1,21 +1,25 @@
-body > div > main {
+main {
+  width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 100px;
+  background-color: black;
 }
-body > div > main > section:nth-child(1) {
+main > section:nth-child(1) {
   width: 100%;
   height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-body > div > main > section:nth-child(1) > article {
+main > section:nth-child(1) > article {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-body > div > main > section:nth-child(1) > article > div {
+main > section:nth-child(1) > article > div {
   display: flex;
   flex-direction: column;
   padding: 1vw;
@@ -24,21 +28,21 @@ body > div > main > section:nth-child(1) > article > div {
   background-color: white;
   row-gap: 1vh;
 }
-body > div > main > section:nth-child(1) > article > div > div:nth-child(1) {
+main > section:nth-child(1) > article > div > div:nth-child(1) {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 1vh;
 }
-body > div > main > section:nth-child(1) > article > div > div:nth-child(1) > img {
+main > section:nth-child(1) > article > div > div:nth-child(1) > img {
   width: 12vw;
   height: auto;
 }
-body > div > main > section:nth-child(1) > article > div > div:nth-child(2) {
+main > section:nth-child(1) > article > div > div:nth-child(2) {
   display: flex;
   justify-content: center;
 }
-body > div > main > section:nth-child(1) > article > div > div:nth-child(2) > button {
+main > section:nth-child(1) > article > div > div:nth-child(2) > button {
   background-color: rgba(45, 82, 4, 0.781);
   color: white;
   padding: 1vh;
@@ -46,10 +50,10 @@ body > div > main > section:nth-child(1) > article > div > div:nth-child(2) > bu
   border: none;
   border-radius: 50px;
 }
-body > div > main > section:nth-child(2) {
+main > section:nth-child(2) {
   width: 15vw;
 }
-body > div > main > section:nth-child(2) > div:nth-child(2) {
+main > section:nth-child(2) > div:nth-child(2) {
   display: flex;
   justify-content: center;
   -moz-column-gap: 0.5vw;
