--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -1,32 +1,32 @@
-div > header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.5vw;
   background-color: white;
 }
-div > header > div:nth-child(2) {
+header > div:nth-child(2) {
   display: flex;
   align-items: center;
   -moz-column-gap: 1vw;
        column-gap: 1vw;
 }
-div > header > div:nth-child(2) > img {
+header > div:nth-child(2) > img {
   background-color: #646464;
   border-radius: 5px;
   width: 32px;
   height: auto;
 }
-div > header > div:nth-child(2) > img:hover {
+header > div:nth-child(2) > img:hover {
   background-color: blue;
   cursor: pointer;
 }
-div > header > div:nth-child(2) > form {
+header > div:nth-child(2) > form {
   display: flex;
   -moz-column-gap: 0.5vw;
        column-gap: 0.5vw;
 }
-div > header > div:nth-child(2) > form > label {
+header > div:nth-child(2) > form > label {
   display: flex;
   -moz-column-gap: 0.5vw;
        column-gap: 0.5vw;
