--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Acme&family=Pirata+One&display=swap");
-* {
+body {
   margin: 0;
-  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
-
-body {
-  position: relative;
-  font-family: acme;
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-}
-body > #root {
-  position: relative;
-  min-height: 100vh;
-}
-
-.page {
-  display: flex;
-  background-color: white;
-}/*# sourceMappingURL=index.css.map */
