--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -44,7 +44,7 @@ header {
                     cursor: pointer;
                 }
 
-                >span:nth-child(2) {
+                >span {
                     width: 1.5vw;
                     height: 1.5vw;
                     display: flex;
