--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ body > #root {
 .button {
   background-color: rgba(45, 82, 4, 0.781);
   color: white;
-  padding: 1vh;
+  padding: 1vh 1vw;
   font-weight: bold;
   border: none;
   border-radius: 50px;
