--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -30,7 +30,7 @@ body {
 .button {
   background-color: $button;
   color: white;
-  padding: 1vh;
+  padding: 1vh 1vw;
   font-weight: bold;
   border: none;
   border-radius: 50px;
