--- a/frontend/src/pages/Catalogue/Catalogue.css
+++ b/frontend/src/pages/Catalogue/Catalogue.css
@@ -13,13 +13,13 @@ main > section:nth-child(1) {
   justify-content: center;
   align-items: center;
 }
-main > section:nth-child(1) > article {
+main > section:nth-child(1) > .cat-article {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-main > section:nth-child(1) > article > div {
+main > section:nth-child(1) > .cat-article > div {
   display: flex;
   flex-direction: column;
   padding: 1vw;
@@ -28,17 +28,17 @@ main > section:nth-child(1) > article > div {
   background-color: white;
   row-gap: 1vh;
 }
-main > section:nth-child(1) > article > div > div:nth-child(1) {
+main > section:nth-child(1) > .cat-article > div > div:nth-child(1) {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 1vh;
 }
-main > section:nth-child(1) > article > div > div:nth-child(1) > img {
+main > section:nth-child(1) > .cat-article > div > div:nth-child(1) > img {
   width: 12vw;
   height: auto;
 }
-main > section:nth-child(1) > article > div > div:nth-child(2) {
+main > section:nth-child(1) > .cat-article > div > div:nth-child(2) {
   display: flex;
   justify-content: center;
 }/*# sourceMappingURL=Catalogue.css.map */
