--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,4 +1,4 @@
-.cart > div:nth-child(1) {
+main > div:nth-child(1) {
   display: flex;
   flex-direction: column;
   row-gap: 2vh;
@@ -12,18 +12,18 @@
   transform: translate(-50%, -50%);
   z-index: 3;
 }
-.cart > div:nth-child(1) > h2 {
+main > div:nth-child(1) > h2 {
   border-bottom: 1px solid rgba(45, 82, 4, 0.781);
 }
-.cart > div:nth-child(1) > ul {
+main > div:nth-child(1) > ul {
   list-style-type: none;
   padding: 1vw;
 }
-.cart > div:nth-child(1) > ul > li > div:nth-child(1) {
+main > div:nth-child(1) > ul > li > div:nth-child(1) {
   display: flex;
   justify-content: space-between;
 }
-.cart > div:nth-child(1) > .total {
+main > div:nth-child(1) > .total {
   display: flex;
   justify-content: space-between;
   -moz-column-gap: 0.5vw;
@@ -31,12 +31,12 @@
   border-top: 1px solid rgba(45, 82, 4, 0.781);
   padding: 1vh;
 }
-.cart > div:nth-child(1) > .boutons {
+main > div:nth-child(1) > .boutons {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
-.cart > div:nth-child(1) > .boutons > div {
+main > div:nth-child(1) > .boutons > div {
   display: flex;
   -moz-column-gap: 0.5vw;
        column-gap: 0.5vw;
