--- a/frontend/src/pages/Cart/Cart.scss
+++ b/frontend/src/pages/Cart/Cart.scss
@@ -1,5 +1,4 @@
-.cart {
-
+main {
     >div:nth-child(1) {
         display: flex;
         flex-direction: column;
@@ -49,5 +48,4 @@
             }
         }
     }
-
 }
