--- a/frontend/src/pages/Catalogue/Catalogue.scss
+++ b/frontend/src/pages/Catalogue/Catalogue.scss
@@ -13,7 +13,7 @@ main {
         justify-content: center;
         align-items: center;
 
-        >article {
+        >.cat-article {
             width: 80%;
             display: flex;
             flex-wrap: wrap;
