--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -20,6 +20,12 @@ body {
 body > #root {
   position: relative;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+body > #root > main {
+  padding-top: 3vh;
 }
 
 .button {
