--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,7 +11,7 @@ $button: rgba(45, 82, 4, 0.781);
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -24,6 +24,13 @@ body {
   >#root {
     position: relative;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    >main {
+      padding-top: 3vh;
+    }
   }
 }
 
