--- a/frontend/src/pages/Order/Order.css
+++ b/frontend/src/pages/Order/Order.css
@@ -14,9 +14,11 @@
   border-radius: 10px;
   padding: 2vw;
 }
-.order-main > .order-section > .order-article > h4 {
+.order-main > .order-section > .order-article > div {
+  border-bottom: 1px solid rgba(45, 82, 4, 0.781);
+}
+.order-main > .order-section > .order-article > div > h4 {
   color: rgba(45, 82, 4, 0.781);
-  text-decoration: underline;
 }
 .order-main > .order-section > .order-article > span {
   display: flex;
