--- a/frontend/src/pages/Order/Order.scss
+++ b/frontend/src/pages/Order/Order.scss
@@ -17,9 +17,12 @@ $green: rgba(45, 82, 4, 0.781);
             border-radius: 10px;
             padding: 2vw;
 
-            >h4 {
-                color: $green;
-                text-decoration: underline;
+            >div {
+                border-bottom: 1px solid $green;
+
+                >h4 {
+                    color: $green;
+                }
             }
 
             >span {
